fixed the code for race conditions